# 3Depict_Isosurfaces

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  acinclude.m4  aclocal.m4  callgraph.dot  callgraph.dot.ps  changelog.txt  config.h  config.h.in  config.status  configure  configure.ac  gitignore  makeMacOSXApp
bugs/: reports
src/: 3Depict.cpp  3Depict.h  3Depict.rc  APTClasses.cpp  APTClasses.h  ExportPos.cpp  ExportPos.h  ExportRngDialog.cpp  ExportRngDialog.h  IsoSurface.cpp  IsoSurface.h  K3DTree-mk2.cpp  K3DTree-mk2.h  K3DTree.cpp  K3DTree.h  Makefile  Makefile.am  Makefile.in  ResDialog.cpp  ResDialog.h  StashDialog.cpp  StashDialog.h  XMLHelper.cpp  XMLHelper.h  animator.cpp  animator.h  art.h  assertion.h  basics.cpp  basics.h  callgrind.out.8111  cameras.cpp  cameras.h  colourmap.cpp  colourmap.h  common.cpp  common.h  commonConstants.h  configFile.cpp  configFile.h  (+64 more)
src/.deps/: 3Depict-3Depict.Po  3Depict-winconsole.Po
src/backend/: animator.cpp  animator.h  configFile.cpp  configFile.h  filter.cpp  filter.h  filtertree.cpp  filtertree.h  filtertreeAnalyse.cpp  filtertreeAnalyse.h  plot.cpp  plot.h  state.cpp  state.h  viscontrol.cpp  viscontrol.h
src/backend/.deps/: 3Depict-animator.Po  3Depict-configFile.Po  3Depict-filter.Po  3Depict-filtertree.Po  3Depict-filtertreeAnalyse.Po  3Depict-plot.Po  3Depict-state.Po  3Depict-viscontrol.Po
src/backend/APT/: APTClasses.cpp  APTClasses.h  APTFileIO.cpp  APTFileIO.h  APTRanges.cpp  APTRanges.h  abundanceParser.cpp  abundanceParser.h  ionhit.cpp  ionhit.h
src/backend/APT/.deps/: 3Depict-APTFileIO.Po  3Depict-APTRanges.Po  3Depict-abundanceParser.Po  3Depict-ionhit.Po  3Depict-vtk.Po
src/backend/filters/: K3DTree-mk2.cpp  K3DTree-mk2.h  K3DTree.cpp  allFilter.cpp  allFilter.h  annotation.cpp  annotation.h  boundingBox.cpp  boundingBox.h  clusterAnalysis.cpp  clusterAnalysis.h  compositionProfile.cpp  compositionProfile.h  dataLoad.cpp  dataLoad.h  externalProgram.cpp  externalProgram.h  filterCommon.cpp  filterCommon.h  geometryHelpers.cpp  geometryHelpers.h  ionClip.cpp  ionClip.h  ionColour.cpp  ionColour.h  ionDownsample.cpp  ionDownsample.h  ionInfo.cpp  ionInfo.h  lukasAnalysis.cpp  lukasAnalysis.h  openvdb_includes.h  profile.cpp  proxigram.cpp  proxigram.h  rangeFile.cpp  rangeFile.h  rdf.cpp  rdf.h  spatialAnalysis.cpp  (+7 more)
src/backend/filters/.deps/: 3Depict-allFilter.Po  3Depict-annotation.Po  3Depict-boundingBox.Po  3Depict-clusterAnalysis.Po  3Depict-dataLoad.Po  3Depict-externalProgram.Po  3Depict-filterCommon.Po  3Depict-geometryHelpers.Po  3Depict-ionClip.Po  3Depict-ionColour.Po  (+9 more)
src/common/: assertion.cpp  assertion.h  basics.cpp  basics.h  bimap.h  colourmap.cpp  colourmap.h  constants.cpp  constants.h  endianTest.h  gsl_helper.cpp  gsl_helper.h  mathfuncs.cpp  mathfuncs.h  mesh.cpp  mesh.h  octTree.cpp  octTree.h  pngread.c  stringFuncs.cpp  stringFuncs.h  translation.h  voxels.cpp  voxels.h  xmlHelper.cpp  xmlHelper.h
src/common/.deps/: 3Depict-assertion.Po  3Depict-basics.Po  3Depict-colourmap.Po  3Depict-constants.Po  3Depict-gsl_helper.Po  3Depict-mathfuncs.Po  3Depict-mesh.Po  3Depict-pngread.Po  3Depict-stringFuncs.Po  3Depict-voxels.Po  3Depict-xmlHelper.Po
src/dialogs/: ExportPos.cpp  ExportPos.h  ExportRngDialog.cpp  ExportRngDialog.h  StashDialog.cpp  StashDialog.h  animateFilterDialog.cpp  animateFilterDialog.h  autosaveDialog.cpp  autosaveDialog.h  filterErrorDialog.cpp  filterErrorDialog.h  prefDialog.cpp  prefDialog.h  resolutionDialog.cpp  resolutionDialog.h
src/dialogs/animateSubDialogs/: choiceKeyFrameDialog.cpp  choiceKeyFrameDialog.h  colourKeyFrameDialog.cpp  colourKeyFrameDialog.h  realKeyFrameDialog.cpp  realKeyFrameDialog.h  stringKeyFrameDialog.cpp  stringKeyFrameDialog.h
src/filters/: allFilter.cpp  allFilter.h  annotation.cpp  annotation.h  boundingBox.cpp  boundingBox.h  clusterAnalysis.cpp  clusterAnalysis.h  compositionProfile.cpp  compositionProfile.h  dataLoad.cpp  dataLoad.h  externalProgram.cpp  externalProgram.h  ionClip.cpp  ionClip.h  ionColour.cpp  ionColour.h  ionDownsample.cpp  ionDownsample.h  ionInfo.cpp  ionInfo.h  posLoad.cpp  posLoad.h  rangeFile-openmp-incomplete.patch  rangeFile.cpp  rangeFile.h  spatialAnalysis.cpp  spatialAnalysis.h  spectrumPlot.cpp  spectrumPlot.h  transform.cpp  transform.h  voxelise.cpp  voxelise.h
src/gl/: cameras.cpp  cameras.h  drawables.cpp  drawables.h  effect.cpp  effect.h  glDebug.h  isoSurface.cpp  isoSurface.h  mesh.cpp  scene.cpp  scene.h  select.cpp  select.h  textures.cpp  textures.h  tmp  tr.cpp  tr.h
src/gl/.deps/: 3Depict-cameras.Po  3Depict-drawables.Po  3Depict-effect.Po  3Depict-isoSurface.Po  3Depict-scene.Po  3Depict-select.Po  3Depict-textures.Po  3Depict-tr.Po
src/glade-skeleton/: errorDialog.wxg  preferencesDialog.wxg  resDialog.wxg  skeleton-part2.wxg  skeleton.wxg
src/gui/: art.h  cropPanel.cpp  cropPanel.h  glPane.cpp  glPane.h  mainFrame.cpp  mainFrame.h  mathglPane.cpp  mathglPane.h
src/gui/.deps/: 3Depict-cropPanel.Po  3Depict-glPane.Po  3Depict-mainFrame.Po  3Depict-mathglPane.Po
src/gui/dialogs/: ExportPos.cpp  ExportPos.h  ExportRngDialog.cpp  ExportRngDialog.h  StashDialog.cpp  StashDialog.h  animateFilterDialog.cpp  animateFilterDialog.h  autosaveDialog.cpp  autosaveDialog.h  filterErrorDialog.cpp  filterErrorDialog.h  prefDialog.cpp  prefDialog.h  rangeEditDialog.cpp  rangeEditDialog.h  resolutionDialog.cpp  resolutionDialog.h
src/gui/glade-skeleton/: animateFilterDialog.wxg  autosaveDialog.wxg  mainWindow.wxg  prefDialog.cpp  prefDialog.h  preferencesDialog.wxg  rangeDialog.wxg
src/testing/: filtertesting.cpp  mglTesting.cpp  mglTesting.h  testing.cpp  testing.h
src/testing/.deps/: 3Depict-mglTesting.Po  3Depict-testing.Po
src/tex-source/: Icons-licence.txt
src/wx/: checkedlistctrl.cpp  checkedlistctrl.h  propertyGridUpdater.cpp  propertyGridUpdater.h  wxcommon.cpp  wxcommon.h  wxcomponents.cpp  wxcomponents.h
src/wx/.deps/: 3Depict-propertyGridUpdater.Po  3Depict-wxcommon.Po  3Depict-wxcomponents.Po
(+210 files in other folders)
